manifest changes to enable culling in notebook

--- a/kfdef/kfctl_k8s_istio.yaml
+++ b/kfdef/kfctl_k8s_istio.yaml
@@ -153,7 +153,11 @@ spec:
   - kustomizeConfig:
       overlays:
       - istio
+      - culling
       - application
+      parameters:
+      - name: ENABLE_CULLING
+        value: 'false'
       repoRef:
         name: manifests
         path: jupyter/notebook-controller
